samples/_failures_safe/1761704841_a8b9cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3305668c.c: In function ‘main’:
./samples/SAFE/__tmp_3305668c.c:129:5: error: ‘init’ undeclared (first use in this function); did you mean ‘int’?
  129 |     init
      |     ^~~~
      |     int
./samples/SAFE/__tmp_3305668c.c:129:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3305668c.c:129:9: error: expected ‘;’ at end of input
  129 |     init
      |         ^
      |         ;
./samples/SAFE/__tmp_3305668c.c:129:5: error: expected declaration or statement at end of input
  129 |     init
      |     ^~~~
